# cylindra

./: .gitignore  .pre-commit-config.yaml  404.html  AVG-0.tif  AVG.tif  Cargo.toml  Makefile  README.md  index.html  justfile  launch.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test.tar
.github/workflows/: CI.yml  docs.yml  test.yml
alignment/: index.html
alignment/conventional/: index.html
alignment/landscape/: index.html
alignment/rma/: index.html
alignment/viterbi/: index.html
api/: index.html
api/components/: index.html
api/core/: index.html
api/cylfilters/: index.html
api/cylmeasure/: index.html
api/ext/: index.html
api/plugin/: index.html
api/project/: index.html
asdf/: simulation_info.json
basics/: index.html
batch/: index.html
batch/average/: index.html
batch/collect_projects/: index.html
batch/construct/: index.html
batch/post_processing/: index.html
batch/prep/: index.html
case_studies/: index.html
case_studies/custom_config/: index.html
case_studies/learning_cft/: index.html
case_studies/make_figure/: index.html
case_studies/rma/: index.html
case_studies/seam_search/: index.html
case_studies/ssta/: index.html
cli/: index.html
cpp/: _alleviate.h  _anneal.h  _constraint.h  _coords.h  _cylindric.h  _grid.h  _grid2d.h  _random.h  _viterbi.cpp  _viterbi.h  _viterbi_cylindric.h  coords.h  main.cpp
cpp/annealing/: _binding_potential.h  _graph.h  _model.h  _random.h  _reservoir.h
cylindra/: __about__.py  __init__.py  __main__.py  _config.py  _cpp_ext.pyi  _custom_layers.py  _cylindra_ext.pyi  _dask.py  _dict.py  _info.py  _io.py  _ipython.py  _list.py  _molecules_layer.py  _previews.py  _shared_doc.py  annotations.py  collection.py  const.py  core.py  cylfilters.py  cylmeasure.py  cylstructure.py  cyltransform.py  napari.yaml  project.py  template_free.py  types.py  utils.py  widget_utils.py
cylindra/_data/: BtubAB.json  TMV.json  actin.json  eukaryotic_MT.json
cylindra/_napari/: __init__.py  _layer_controls.py  _layers.py  _sub_controls.py
cylindra/cli/: __init__.py  _base.py  average.py  config.py  find.py  new.py  none.py  open.py  plugin.py  prep.py  prep_defaults.py  preview.py  run.py  workflow.py
cylindra/cli/_cookiecutter_template/{{cookiecutter.plugin_name}}/: .gitignore  LICENSE  README.md  pyproject.toml
cylindra/cli/_cookiecutter_template/{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py  core.py
cylindra/components/: __init__.py  _base.py  _boundary.py  _cylinder_params.py  _ftprops.py  _localprops.py  _peak.py  _picker.py  cyl_spline.py  cyl_tomogram.py  cylindric.py  imscale.py  interaction.py  landscape.py  microtubule.py  picker.py  radon_model.py  seam_search.py  spline.py  tomogram.py  visualize.py
cylindra/ext/: __init__.py  _utils.py
cylindra/plugin/: __init__.py  _find.py  core.py  function.py
cylindra/project/: __init__.py  _base.py  _batch.py  _defaults.py  _json.py  _layer_info.py  _sequence.py  _single.py  _utils.py  _widgets.py  batch.py  collection.py  sequence.py  single.py
cylindra/utils/: __init__.py  _color.py  _correlation.py  _misc.py  _sheared.py  _structures.py  _test_utils.py  _viterbi.py  testing.py
cylindra/widgets/: __init__.py  _accessors.py  _annealing.py  _annotated.py  _callbacks.py  _main_utils.py  _molecules_layer.py  _previews.py  _process_template.py  _progress_desc.py  _reserved_layers.py  _shared_doc.py  _ui_init.py  _widget_ext.py  dataframe_list.py  events.py  feature_control.py  function_menu.py  global_variables.py  image_processor.py  main.py  main_collection.py  measure.py  pca.py  project.py  properties.py  simulator.py  slicer.py  spline_clipper.py  spline_control.py  spline_fitter.py  sta.py  style.qss  subwidgets.py  sweeper.py  widget_utils.py
cylindra_builtins/: _pytest_fixtures.py
cylindra_builtins/fetch/: __init__.py  core.py
cylindra_builtins/imod/: __init__.py  _mod_file.py  cmd.py  io.py
cylindra_builtins/relion/: __init__.py  _relion_utils.py  io.py
docs/: basics.md  cft.md  cli.md  components.md  configure.md  extra_style.css  fit_splines.md  index.md  inspect_results.md  installation.md  lattice_params.md  open_image.md  plugins.md  process_images.md  project_io.md  seam_search.md  simulate.md  workflows.md
docs/alignment/: conventional.md  index.md  landscape.md  rma.md  viterbi.md
docs/api/: core.md  (+7 more)
fit_splines/: index.html
inspect_results/: index.html
installation/: index.html
lattice_params/: index.html
molecules/: index.html
mtprops/: __init__.py  __main__.py  _cpp_ext.pyi  _dependencies.py  _impy.py  _info.py  _napari_plugin.py  averaging.py  cache.py  const.py  core.py  molecules.py  mtpath.py  napari.yaml  recon.py  spline.py  tomogram.py  types.py  utils.py  vector.py  widget.py  worker.py
open_image/: index.html
plugins/: index.html
process_images/: index.html
project_io/: index.html
scripts/: _dynamic_doc.py  _screenshots.py  annealing_demo.py  benchmark_0.py  calibrate_nsr.py  demo_rfa.py  demo_rma.py  generate_images.py  rma_demo.py  rma_fluctuation.py  similate_cft.py  simulate_alignments.py  simulate_cft.py  simulate_supertwist.py  tip_recognition_demo.py
seam_search/: index.html
search/: search_index.json
simulate/: index.html
spline/: index.html
src/: alleviate.rs  array.rs  cylindric.rs  exceptions.rs  filters.rs  hash_2d.rs  lib.rs  oblique.rs  regionprops.rs
tests/: .cylindra-defaults.toml  13pf_MT.tif  14pf_MT.tif  __init__.py  _const.py  beta-tubulin.mrc  conftest.py  dummy.mrc.mdoc  monomer_angles.txt  monomer_coords.txt  result.json  template.mrc  test_algorithms.py  test_batch.py  test_cache.py  test_custom_widgets.py  test_cylfilters.py  test_cylindric_model.py  test_cylstructure.py  test_dataframe_list.py  test_generics.py  test_gui.py  test_gui_0.py  test_gui_1_batch.py  test_gui_2_cli.py  test_gui_2_etomo.py  test_gui_2_extensions.py  test_io.py  test_molecules.py  test_mtprops.py  test_projects.py  test_regionprops.py  test_splines.py  test_utils.py  test_vectors.py  test_viterbi.py  utils.py
workflows/: index.html
(+200 files in other folders)
