[package]
name = "cylindra_ext"
version = "1.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_cylindra_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.6"
numpy = "0.22.1"  # NOTE: numpy=0.23.0 fails to compile in some OS
rand = "0.8.5"
mt19937 = "2.0.1"
num = { version = "0.4.0", features = ["std"] }
