[package]
name = "cylindra_ext"
version = "1.0.0-beta.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_cylindra_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
numpy = "0.25.0"
rand = "0.8.3"
mt19937 = "2.0.1"
num = { version = "0.4.3", features = ["std"] }
